force-app/main/default/objects/Route_Stop__c/Route_Stop__c.object-meta.xml
<CustomObject>
  <label>Route Stop</label>
  <pluralLabel>Route Stops</pluralLabel>
  <nameField>
    <label>Route Stop Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>