force-app/main/default/objects/Route_Stop__c/fields/Eta__c.field-meta.xml
<CustomField>
  <fullName>Eta__c</fullName>
  <label>ETA</label>
  <type>DateTime</type>
</CustomField>