force-app/main/default/objects/Route_Stop__c/fields/LegDistanceKm__c.field-meta.xml
<CustomField>
  <fullName>LegDistanceKm__c</fullName>
  <label>Leg Distance (km)</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>2</scale>
</CustomField>