force-app/main/default/objects/Route_Stop__c/fields/LegDurationMin__c.field-meta.xml
<CustomField>
  <fullName>LegDurationMin__c</fullName>
  <label>Leg Duration (min)</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>0</scale>
</CustomField>