force-app/main/default/objects/Route_Stop__c/fields/RoutePlan__c.field-meta.xml
<CustomField>
  <fullName>RoutePlan__c</fullName>
  <label>Route Plan</label>
  <type>MasterDetail</type>
  <referenceTo>Route_Plan__c</referenceTo>
  <relationshipLabel>Route Plan</relationshipLabel>
  <relationshipName>RoutePlan</relationshipName>
</CustomField>