force-app/main/default/objects/Route_Stop__c/fields/Sequence__c.field-meta.xml
<CustomField>
  <fullName>Sequence__c</fullName>
  <label>Sequence</label>
  <type>Number</type>
  <precision>5</precision>
  <scale>0</scale>
  <required>true</required>
</CustomField>