force-app/main/default/objects/Route_Stop__c/fields/Visit__c.field-meta.xml
<CustomField>
  <fullName>Visit__c</fullName>
  <label>Visit</label>
  <type>Lookup</type>
  <referenceTo>Visit__c</referenceTo>
  <relationshipLabel>Visit</relationshipLabel>
  <relationshipName>Visit</relationshipName>
</CustomField>